# valconfig

./: README.md  pyproject.toml
.github/workflows/: build.yml
docs/: Usage.md
valconfig/: valconfig.py
valconfig/contrib/: README.md  holoviews.py
